<resources>
    <string name="app_name">Get Healthy Application</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="message">Create a new Account:</string>
    <string name="first_name">Enter your first name</string>
    <string name="last_name">Enter your last name</string>
    <string name="username">Username</string>
    <string name="password">Enter your password</string>
    <string name="height">Enter your height (in inches)</string>
    <string name="weight">Enter your weight (in pounds)</string>
    <string name="sex">Enter your sex (ex. Female) </string>
    <string name="age">Enter your age (ex. 21) </string>
    <string name="image_desc">This is the description of our logo</string>
    <string name="sign_up">Sign Up</string>

    <string name="email">Enter your email</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account Here</string>
    <string name="icon">icon</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="menu_action_log_out">Log out</string>
    <string name="menu_action_home">Home</string>

    <string name="chooser_title">Share with</string>


    <string name="meal_log_btn">Meal Log</string>
    <string name="food_txt">Food</string>
    <string name="healthy_recipes_btn">Healthy Recipes</string>
    <string name="breakfast_btn">Breakfast</string>
    <string name="lunch_btn">Lunch</string>
    <string name="dinner_btn">Dinner</string>
    <string name="day_of_meal_breakfast">Day of Meal: Breakfast</string>
    <string name="gordon_ramsay_s_scambled_eggs">Gordon Ramsay\'s Scambled Eggs</string>
    <string name="beautiful_breakfast_tortillas">Beautiful Breakfast Tortillas</string>
    <string name="my_brilliant_breakfast">My Brilliant Breakfast</string>
    <string name="chef_gordon_ramsay">Chef: Gordon Ramsay</string>
    <string name="chef_jamie_oliver">Chef: Jamie Oliver</string>

    <string name="asking_location">Where would you like to workout at?</string>
    <string name="asking_style">What type of workout?</string>
    <string name="location_gym">Gym</string>
    <string name="location_home">Home</string>
    <string name="style_cardio">Cardio</string>
    <string name="style_weight_lifting">Weight Lifting</string>
    <string name="go_to">Go to</string>
    <string name="menu_action_about">About</string>

    <string name="LOGIN_PREFS">edu.tacoma.uw.datalab.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="beverage_consumption">Beverage Consumption</string>
    <string name="water">Water</string>
    <string name="breakfirst_consume">Breakfirst</string>
    <string name="lunch_consume">Lunch</string>
    <string name="dinner_consume">Dinner</string>
    <string name="food_name">Food name</string>
    <string name="nutri">Nutrients from this meal</string>
    <string name="vegi">Vegetable</string>
    <string name="fruits">Fruits</string>
    <string name="grains">Grains</string>
    <string name="meat">Meats</string>
    <string name="dairy_product">Dairy product</string>
    <string name="time_message">Select a time to start your log</string>
    <string name="unit">Oz</string>
    <string name="log">Make Log</string>
    <string name="view_log">View Log</string>
    <string name="write_log">Write Log</string>


</resources>
