<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".food.BreakfastFragment">


    <TextView
        android:id="@+id/chef2_txt"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:text="@string/chef_jamie_oliver"
        android:textSize="18sp"
        android:layout_margin="5dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/gordon_btn"
        android:layout_width="240dp"
        android:layout_height="62dp"
        android:layout_margin="15dp"
        android:text="@string/gordon_ramsay_s_scambled_eggs" />

    <TextView
        android:id="@+id/chef1_txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chef_gordon_ramsay"
        android:textSize="18sp"
        android:layout_margin="5dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/jamie1_btn"
        android:layout_width="240dp"
        android:layout_height="62dp"
        android:layout_margin="10dp"
        android:text="@string/beautiful_breakfast_tortillas" />

    <Button
        android:id="@+id/jamie2_btn"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/my_brilliant_breakfast" />

</LinearLayout>