<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WorkoutActivity">

    <RadioGroup
        android:id="@+id/radio_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="182dp">

        <RadioButton
            android:id="@+id/radio_gym"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_gym"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radio_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_home" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radio_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="182dp">

        <RadioButton
            android:id="@+id/btn_cardio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/style_cardio"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/btn_weight_lifting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/style_weight_lifting" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_go_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:onClick="launch"
        android:text="@string/go_to" />

    <TextView
        android:id="@+id/location_asking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="147dp"
        android:text="@string/asking_location" />

    <TextView
        android:id="@+id/style_asking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="254dp"
        android:text="@string/asking_style" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="136dp">

    </FrameLayout>

</RelativeLayout>