<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".food.LogListDetailFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/food_txt"
        android:textSize="26sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:text="@string/meal_log_btn"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/time_edit"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sub_title"
        android:ems="10"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/beverage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/time_edit"
        android:text="@string/beverage_consumption"
        android:layout_alignParentLeft="true"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/water"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/beverage"
        android:layout_marginStart="40dp"
        android:text="@string/water"
        android:textSize="16sp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp" />

    <TextView
        android:id="@+id/other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/water"
        android:layout_marginTop="173dp"
        android:text="Other"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/other_consume_edit"
        android:layout_width="69dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/other"
        android:layout_alignStart="@+id/vegi_consume_edit"
        android:layout_marginStart="22dp" />

    <TextView
        android:id="@+id/vegi_consume_edit"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/vagetable"
        android:layout_alignEnd="@+id/unit2"
        android:layout_alignRight="@+id/unit2" />

    <TextView
        android:id="@+id/fruit_consume_edit"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/vegi_consume_edit"
        android:layout_below="@+id/vegi_consume_edit" />

    <TextView
        android:id="@+id/meat_consume_edit"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/meat"
        android:layout_alignStart="@+id/vegi_consume_edit" />

    <TextView
        android:id="@+id/dairy_product_consume_edit"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/vegi_consume_edit"
        android:layout_below="@+id/meat_consume_edit" />

    <TextView
        android:id="@+id/grains_consume2_edit"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/vegi_consume_edit"
        android:layout_below="@+id/fruit_consume_edit" />

    <TextView
        android:id="@+id/food_name_edit"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="222dp"
        android:layout_toEndOf="@+id/title" />


    <TextView
        android:id="@+id/water_consume_edit"
        android:layout_width="71dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/water"
        android:layout_toEndOf="@+id/time_edit" />

    <TextView
        android:id="@+id/unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/vegi_consume_edit"
        android:layout_alignTop="@+id/other"
        android:text="@string/unit"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/unit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/beverage"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/unit"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/breakfast_meal_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/other_consume_edit"
        android:textSize="24sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/mealmessage"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/title"
        android:layout_below="@+id/food"
        android:text="@string/nutri" />

    <TextView
        android:id="@+id/vagetable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="256dp"
        android:layout_marginStart="64dp"
        android:text="@string/vegi"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/fruits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/vagetable"
        android:layout_below="@+id/vegi_consume_edit"
        android:text="@string/fruits"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/Grains"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/vagetable"
        android:layout_below="@+id/fruits"
        android:text="@string/grains" />

    <TextView
        android:id="@+id/meat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/vagetable"
        android:layout_marginBottom="126dp"
        android:text="@string/meat" />

    <TextView
        android:id="@+id/dairy_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/dairy_product_consume_edit"
        android:layout_toStartOf="@+id/title"
        android:text="@string/dairy_product" />

    <TextView
        android:id="@+id/food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/food_name_edit"
        android:layout_alignStart="@+id/water"
        android:text="@string/food_name" />


</RelativeLayout>